--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.4",
+    "jest-environment-node-debug": "^2.0.0",
     "lodash": "^4.17.4"
   }
 }
